<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorBackground"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ContactActivity" >

    <TextView
        android:id="@+id/contact_msg"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:textSize="18dip"
        android:text="@string/contact_string"
        android:textColor="@color/colorText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <ScrollView
        android:id="@+id/sv_fields_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_usr_name"
                android:textColor="@color/colorText1" />

            <EditText
                android:id="@+id/et_usr_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText1"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHighlight="@color/colorText2"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_usr_pass"
                android:textColor="@color/colorText1" />

            <EditText
                android:id="@+id/et_usr_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/colorText1"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHighlight="@color/colorText2"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText1"
                android:text="@string/tv_subject" />

            <EditText
                android:id="@+id/et_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/colorText1"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHighlight="@color/colorText2"
                android:inputType="text">

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText1"
                android:text="@string/tv_text_content" />

            <EditText
                android:id="@+id/etml_text_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/colorText1"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHighlight="@color/colorText2"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_send"
                    android:text="@string/btn_send"
                    android:onClick="sendMail"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ly_loading_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText1"
            android:text="@string/tv_sending_mail"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>